# drive-state

./: .gitignore  COCO数据集对应表.md  Cargo.toml  README.md
Image_overlays/: 2.txt  main.py  overlays.py
datas/: README.md
datas/reoverlays/: images_1_001.json  images_1_003.json
datas/res/images_1_001/: 0.txt  100.txt  120.txt  140.txt  160.txt  180.txt  20.txt  200.txt  220.txt  240.txt  260.txt  280.txt  300.txt  320.txt  340.txt  360.txt  380.txt  40.txt  400.txt  420.txt  60.txt  80.txt
datas/res/images_1_003/: 0.txt  100.txt  120.txt  140.txt  160.txt  180.txt  20.txt  200.txt  220.txt  240.txt  260.txt  280.txt  300.txt  40.txt  60.txt  80.txt
datas/videos/: images_1_003.avi
drive-state/: Cargo.toml
drive-state/src/: error.rs  lib.rs  lower.rs
drive-state/src/core/: mod.rs
drive-state/src/state/: normal_driving.rs  types.rs
drive-state/tests/: Cargo.toml
drive-state/tests/src/: main.rs
drive-state/tests/src/examples/: lifetime.rs
drive_analysis/: package-lock.json  package.json
drive_analysis/src/: App.vue  styles.css
drive_analysis/src-tauri/: Cargo.toml  tauri.conf.json
drive_analysis/src-tauri/src/: main.rs
src/: lib.rs
src/core/: action.rs  condition.rs  entity.rs  event.rs  mod.rs
src/state/: event.rs  mod.rs  types.rs
tests/: Cargo.toml
tests/src/: main.rs
