[package]
name = "drive-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
except-plugin = { version = "0.0.1", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
