[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drive-state = { path = "../../drive-state" }
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
